[project]
name = "market-data-fetcher"
version = "0.1.0"
description = "MCP Server for fetching market data from Longport and AKShare"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }
authors = [
    { name = "AI Agent (TRAE CN SOLO GLM5.1)" },
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "pandas>=2.0.0",
    "pytz>=2024.1",
    "akshare>=1.12.0",
]

[project.optional-dependencies]
longport = [
    "longport>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
market-data-fetcher = "market_data_fetcher.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_data_fetcher"]

[tool.ruff]
line-length = 120
target-version = "py310"
